Hide axis settings

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <input type="text" id="opacityText" value="255" />
     </div>
     <div style="margin-top: 1rem">
-      Rotation
-      <br />
-      <label for="rotationXText">Axis X</label>
-      <input type="text" id="rotationXText" value="0" />
-      <label for="rotationYText">Y</label>
-      <input type="text" id="rotationYText" value="0" />
-      <label for="rotationZText">Z</label>
-      <input type="text" id="rotationZText" value="1" />
-      <br />
+      <!-- Rotation
+      <br /> -->
+      <label for="rotationXText" hidden>Axis X</label>
+      <input type="text" id="rotationXText" value="0" hidden />
+      <label for="rotationYText" hidden>Y</label>
+      <input type="text" id="rotationYText" value="0" hidden />
+      <label for="rotationZText" hidden>Z</label>
+      <input type="text" id="rotationZText" value="1" hidden />
+      <!-- <br /> -->
       <label for="angleText">Angle (in degrees)</label>
       <input type="text" id="angleText" value="0" />
       <input type="text" id="tagPrefixText" value="image_dp_" />
