Add label to tag prefix

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <!-- <br /> -->
       <label for="angleText">Angle (in degrees)</label>
       <input type="text" id="angleText" value="0" />
+      <br />
+      <label for="tagPrefixText">Tag prefix</label>
       <input type="text" id="tagPrefixText" value="image_dp_" />
     </div>
     <div style="margin-top: 1rem">
